--- a/Todo.Base/Todo.Base.csproj
+++ b/Todo.Base/Todo.Base.csproj
@@ -75,17 +75,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DbContextHelper.cs" />
-    <Compile Include="DataState.cs" />
-    <Compile Include="GenericRepository.cs" />
+    <Compile Include="Entities\DbContextHelper.cs" />
+    <Compile Include="Entities\DataState.cs" />
+    <Compile Include="Repository\GenericRepository.cs" />
     <Compile Include="HubApiController.cs" />
-    <Compile Include="IGenericRepository.cs" />
-    <Compile Include="IDataWithState.cs" />
+    <Compile Include="Repository\IGenericRepository.cs" />
+    <Compile Include="Entities\IDataWithState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StateMapper.cs" />
+    <Compile Include="Entities\StateMapper.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
