--- a/Todo.Services/Todo.Services.csproj
+++ b/Todo.Services/Todo.Services.csproj
@@ -8,7 +8,7 @@
     <ProjectGuid>{ACFFC9C6-7462-4955-9999-12C24E818D9E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Todo.WebApi</RootNamespace>
+    <RootNamespace>Todo.Services</RootNamespace>
     <AssemblyName>Todo.WebApi</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -112,16 +112,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AcsController.cs" />
-    <Compile Include="BlobStorageMultipartProvider.cs" />
-    <Compile Include="BlobHelper.cs" />
-    <Compile Include="LogController.cs" />
-    <Compile Include="PicturesController.cs" />
-    <Compile Include="PingController.cs" />
-    <Compile Include="DataMapper.cs" />
+    <Compile Include="Controllers\AcsController.cs" />
+    <Compile Include="Helpers\BlobStorageMultipartProvider.cs" />
+    <Compile Include="Helpers\BlobHelper.cs" />
+    <Compile Include="Controllers\LogController.cs" />
+    <Compile Include="Controllers\PicturesController.cs" />
+    <Compile Include="Controllers\PingController.cs" />
+    <Compile Include="Helpers\DataMapper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TodosController.cs" />
-    <Compile Include="TodosHub.cs" />
+    <Compile Include="Controllers\TodosController.cs" />
+    <Compile Include="Hubs\TodosHub.cs" />
     <Compile Include="TokenResponse.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -137,9 +137,9 @@
       <Project>{E8868953-F0BB-4B1C-8EF4-006285C76EE0}</Project>
       <Name>Todo.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Base\Todo.Base.csproj">
-      <Project>{EA925276-3B76-4178-99AB-FEA985E6AA5B}</Project>
-      <Name>Todo.Base</Name>
+    <ProjectReference Include="..\Todo.Framework\Todo.Framework.csproj">
+      <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
+      <Name>Todo.Framework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.Security\Todo.Security.csproj">
       <Project>{05abe5fa-9e23-4fc9-b315-bba3fce88a7e}</Project>
