--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -667,9 +667,9 @@
       <Project>{05ABE5FA-9E23-4FC9-B315-BBA3FCE88A7E}</Project>
       <Name>Todo.Security</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.WebApi\Todo.WebApi.csproj">
+    <ProjectReference Include="..\Todo.WebApi\Todo.Services.csproj">
       <Project>{ACFFC9C6-7462-4955-9999-12C24E818D9E}</Project>
-      <Name>Todo.WebApi</Name>
+      <Name>Todo.Services</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
