--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -667,7 +667,7 @@
       <Project>{05ABE5FA-9E23-4FC9-B315-BBA3FCE88A7E}</Project>
       <Name>Todo.Security</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.WebApi\Todo.Services.csproj">
+    <ProjectReference Include="..\Todo.Services\Todo.Services.csproj">
       <Project>{ACFFC9C6-7462-4955-9999-12C24E818D9E}</Project>
       <Name>Todo.Services</Name>
     </ProjectReference>
