--- a/Todo.SelfHost/packages.config
+++ b/Todo.SelfHost/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130404" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.0-beta1-130404" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0-alpha-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.0-beta1-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.0.0-alpha-130405" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
-  <package id="Microsoft.Owin.Host.HttpListener" version="1.1.0-alpha1-20404-166" targetFramework="net45" />
-  <package id="Microsoft.Owin.Hosting" version="1.1.0-alpha1-20404-166" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="1.1.0-alpha1-20405-167" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="1.1.0-alpha1-20405-167" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
 </packages>
