--- a/Todo.DataAccess/packages.config
+++ b/Todo.DataAccess/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.0.0-alpha3-20404" targetFramework="net45" />
-  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3-20404" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-alpha-130404" targetFramework="net45" />
