--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -3,8 +3,8 @@
   <package id="angularjs" version="1.0.5" targetFramework="net45" />
   <package id="Autofac" version="3.0.1" targetFramework="net45" />
   <package id="Autofac.WebApi" version="3.0.0" targetFramework="net45" />
-  <package id="EntityFramework" version="6.0.0-alpha3-20404" targetFramework="net45" />
-  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3-20404" targetFramework="net45" />
+  <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
+  <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3" targetFramework="net45" />
   <package id="jQuery" version="1.9.1" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.0" targetFramework="net45" />
