--- a/Todo.Tests/App.config
+++ b/Todo.Tests/App.config
@@ -69,6 +69,14 @@
         <assemblyIdentity name="System.Net.Http.Extensions" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.1.3.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MongoDB.Bson" publicKeyToken="f686731cfb9cc103" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.1.4678" newVersion="1.6.1.4678" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MongoDB.Driver" publicKeyToken="f686731cfb9cc103" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.1.4678" newVersion="1.6.1.4678" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
