--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -85,6 +85,14 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-5.0.0.0" newVersion="5.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MongoDB.Bson" publicKeyToken="f686731cfb9cc103" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.1.4678" newVersion="1.6.1.4678" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MongoDB.Driver" publicKeyToken="f686731cfb9cc103" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.6.1.4678" newVersion="1.6.1.4678" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.data>
