--- a/Todo.Services/packages.config
+++ b/Todo.Services/packages.config
@@ -11,10 +11,10 @@
   <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
-  <package id="mongocsharpdriver" version="1.6.1" targetFramework="net45" />
+  <package id="mongocsharpdriver" version="1.8.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
-  <package id="Simple.Data.Core" version="0.18.3.1" targetFramework="net45" />
-  <package id="Simple.Data.MongoDB" version="0.18.0" targetFramework="net45" />
+  <package id="Serilog" version="0.2.2" targetFramework="net45" />
+  <package id="Serilog.Sinks.MongoDB" version="0.2.1" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.3.2" targetFramework="net45" />
   <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
