Update to SignalR 1.1 B1.

--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -25,6 +25,29 @@
       <claimsAuthorizationManager type="Todo.Security.GlobalClaimsAuthorizationManager, Todo.Security" />
     </identityConfiguration>
   </system.identityModel>
+  <system.diagnostics>
+    <sources>
+      <source name="SignalR.SqlMessageBus">
+        <listeners>
+          <add name="SignalR-Bus" />
+        </listeners>
+      </source>
+      <source name="SignalR.ScaleoutMessageBus">
+        <listeners>
+          <add name="SignalR-Bus" />
+        </listeners>
+      </source>
+    </sources>
+    <switches>
+      <add name="SignalRSwitch" value="Verbose" />
+    </switches>
+    <sharedListeners>
+      <add name="SignalR-Bus"
+         type="System.Diagnostics.TextWriterTraceListener"
+         initializeData="c:\temp\bus.log.txt" />
+    </sharedListeners>
+    <trace autoflush="true" />
+  </system.diagnostics>
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off" />
