--- a/Todo.SelfHost/packages.config
+++ b/Todo.SelfHost/packages.config
@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Microsoft.AspNet.Cors" version="5.0.0-alpha-130405" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130405" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.0-beta1-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130413" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SqlServer" version="1.1.0-beta1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130405" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130405" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.0.0-alpha-130405" targetFramework="net45" />
