--- a/Todo.Services/packages.config
+++ b/Todo.Services/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AutoMapper" version="2.2.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-alpha-130404" targetFramework="net45" />
