--- a/.nuget/NuGet.targets
+++ b/.nuget/NuGet.targets
@@ -22,6 +22,7 @@
             <PackageSource Include="https://nuget.org/api/v2/" />
             <PackageSource Include="https://my-nuget-source/nuget/" />
         -->
+      <PackageSource Include="https://nuget.org/api/v2/" />
       <PackageSource Include="http://www.myget.org/F/aspnetwebstacknightly/" />
     </ItemGroup>
 
