--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -42,9 +42,7 @@
       <add name="SignalRSwitch" value="Verbose" />
     </switches>
     <sharedListeners>
-      <add name="SignalR-Bus"
-         type="System.Diagnostics.TextWriterTraceListener"
-         initializeData="c:\temp\bus.log.txt" />
+      <add name="SignalR-Bus" type="System.Diagnostics.TextWriterTraceListener" initializeData="c:\temp\bus.log.txt" />
     </sharedListeners>
     <trace autoflush="true" />
   </system.diagnostics>
