--- a/Todo.Framework/packages.config
+++ b/Todo.Framework/packages.config
@@ -2,9 +2,13 @@
 <packages>
   <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
   <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
-  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130405" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.0.0-alpha-130404" targetFramework="net45" />
+  <package id="Microsoft.Data.Edm" version="5.2.0" targetFramework="net45" />
+  <package id="Microsoft.Data.OData" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.1.3-beta" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
 </packages>
