--- a/Todo.DataAccess/Todo.DataAccess.csproj
+++ b/Todo.DataAccess/Todo.DataAccess.csproj
@@ -103,9 +103,9 @@
       <Project>{E8868953-F0BB-4B1C-8EF4-006285C76EE0}</Project>
       <Name>Todo.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Framework\Todo.Framework.csproj">
+    <ProjectReference Include="..\Todo.Framework\Thinktecture.Applications.Framework.csproj">
       <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
-      <Name>Todo.Framework</Name>
+      <Name>Thinktecture.Applications.Framework</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
