--- a/Todo.Entities/Todo.Entities.csproj
+++ b/Todo.Entities/Todo.Entities.csproj
@@ -58,9 +58,9 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todo.Framework\Todo.Framework.csproj">
+    <ProjectReference Include="..\Todo.Framework\Thinktecture.Applications.Framework.csproj">
       <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
-      <Name>Todo.Framework</Name>
+      <Name>Thinktecture.Applications.Framework</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
