--- a/Todo.Services/Todo.Services.csproj
+++ b/Todo.Services/Todo.Services.csproj
@@ -165,9 +165,9 @@
       <Project>{E8868953-F0BB-4B1C-8EF4-006285C76EE0}</Project>
       <Name>Todo.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Framework\Todo.Framework.csproj">
+    <ProjectReference Include="..\Todo.Framework\Thinktecture.Applications.Framework.csproj">
       <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
-      <Name>Todo.Framework</Name>
+      <Name>Thinktecture.Applications.Framework</Name>
     </ProjectReference>
     <ProjectReference Include="..\Todo.Security\Todo.Security.csproj">
       <Project>{05abe5fa-9e23-4fc9-b315-bba3fce88a7e}</Project>
