--- a/Todo.DataAccess/Todo.DataAccess.csproj
+++ b/Todo.DataAccess/Todo.DataAccess.csproj
@@ -88,7 +88,6 @@
       <DependentUpon>Repositories.tt</DependentUpon>
     </Compile>
     <Compile Include="TodoContext.cs" />
-    <Compile Include="TodoRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -103,7 +102,7 @@
       <Project>{E8868953-F0BB-4B1C-8EF4-006285C76EE0}</Project>
       <Name>Todo.Entities</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Todo.Framework\Thinktecture.Applications.Framework.csproj">
+    <ProjectReference Include="..\Thinktecture.Applications.Framework\Thinktecture.Applications.Framework.csproj">
       <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
       <Name>Thinktecture.Applications.Framework</Name>
     </ProjectReference>
