--- a/Todo.Entities/Todo.Entities.csproj
+++ b/Todo.Entities/Todo.Entities.csproj
@@ -58,7 +58,7 @@
     <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Todo.Framework\Thinktecture.Applications.Framework.csproj">
+    <ProjectReference Include="..\Thinktecture.Applications.Framework\Thinktecture.Applications.Framework.csproj">
       <Project>{ea925276-3b76-4178-99ab-fea985e6aa5b}</Project>
       <Name>Thinktecture.Applications.Framework</Name>
     </ProjectReference>
