--- a/TodoWebApp/Todo.WebApp.csproj
+++ b/TodoWebApp/Todo.WebApp.csproj
@@ -343,9 +343,10 @@
     <Content Include="Content\themes\base\minified\jquery.ui.tabs.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.theme.min.css" />
     <Content Include="Content\themes\base\minified\jquery.ui.tooltip.min.css" />
-    <Content Include="jqm\controllers.js" />
-    <Content Include="jqm\index.html" />
-    <Content Include="jqm\services.js" />
+    <Content Include="jqm\js\controllers.js" />
+    <Content Include="jqm\views\details.html" />
+    <Content Include="jqm\views\index.html" />
+    <Content Include="jqm\js\services.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
     <Content Include="Scripts\jquery-1.9.1.min.js" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
