--- a/Thinktecture.Applications.Framework/packages.config
+++ b/Thinktecture.Applications.Framework/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130405" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130405" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-alpha-130404" targetFramework="net45" />
