--- a/Todo.Services/packages.config
+++ b/Todo.Services/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="AutoMapper" version="2.2.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.0.0-alpha-130404" targetFramework="net45" />
@@ -13,7 +13,7 @@
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.3" targetFramework="net40" />
   <package id="mongocsharpdriver" version="1.8.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
-  <package id="Serilog" version="0.2.10" targetFramework="net45" />
+  <package id="Serilog" version="0.2.11" targetFramework="net45" />
   <package id="Serilog.Sinks.MongoDB" version="0.2.10" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.4.2" targetFramework="net45" />
