--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -11,11 +11,11 @@
   <package id="Microsoft.AspNet.Providers" version="1.2" targetFramework="net40" />
   <package id="Microsoft.AspNet.Providers.Core" version="1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.0.0-alpha-130404" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0-beta1-130413" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.JS" version="1.1.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.0-beta1-130413" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SqlServer" version="1.1.0-beta1" targetFramework="net45" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.1.0-beta1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Owin" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SqlServer" version="1.1.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.0.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.0.0-alpha-130404" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.0.0-alpha-130404" targetFramework="net45" />
