Added SignalR SQL backplane in webhost

--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -39,7 +39,7 @@
       </source>
     </sources>
     <switches>
-      <add name="SignalRSwitch" value="Verbose" />
+      <add name="SignalRSwitch" value="Off" />
     </switches>
     <sharedListeners>
       <add name="SignalR-Bus" type="System.Diagnostics.TextWriterTraceListener" initializeData="c:\temp\bus.log.txt" />
