--- a/TodoWebApp/packages.config
+++ b/TodoWebApp/packages.config
@@ -5,6 +5,8 @@
   <package id="Autofac.WebApi" version="3.0.2" targetFramework="net45" />
   <package id="EntityFramework" version="6.0.0-alpha3" targetFramework="net45" />
   <package id="EntityFramework.SqlServerCompact" version="6.0.0-alpha3" targetFramework="net45" />
+  <package id="Essential.Diagnostics" version="1.2.501.0" targetFramework="net45" />
+  <package id="Essential.Diagnostics.Config" version="1.2.501.0" targetFramework="net45" />
   <package id="jQuery" version="2.0.0" targetFramework="net45" />
   <package id="jQuery.UI.Combined" version="1.10.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.0.0-alpha-130404" targetFramework="net45" />
@@ -34,6 +36,7 @@
   <package id="Newtonsoft.Json" version="5.0.4" targetFramework="net45" />
   <package id="OQuery.NET" version="1.0.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="ReflectSoftware.Insight.Extensions.DebugTrace" version="5.1.2" targetFramework="net45" />
   <package id="System.Spatial" version="5.2.0" targetFramework="net45" />
   <package id="Thinktecture.IdentityModel" version="2.4.2" targetFramework="net45" />
   <package id="Twitter.Bootstrap" version="2.3.1" targetFramework="net45" />
