--- a/TodoWebApp/Web.config
+++ b/TodoWebApp/Web.config
@@ -42,20 +42,13 @@
     </logManager>
   </insightSettings>
 
-  <system.identityModel>
-    <identityConfiguration>
-      <claimsAuthenticationManager type="Todo.Security.GlobalClaimsAuthenticationManager, Todo.Security" />
-      <claimsAuthorizationManager type="Todo.Security.GlobalClaimsAuthorizationManager, Todo.Security" />
-    </identityConfiguration>
-  </system.identityModel>
-
   <system.diagnostics>
     <sources>
       <source name="tUdUs" switchValue="All">
         <listeners>
           <clear />
           <add name="coloredconsole" />
-          <add name="ReflectInsight.Trace" />
+          <!--<add name="ReflectInsight.Trace" />-->
         </listeners>
       </source>
       <source name="SignalR.SqlMessageBus">
@@ -74,13 +67,20 @@
     </switches>
     <sharedListeners>
       <add name="SignalR-Bus" type="System.Diagnostics.TextWriterTraceListener" initializeData="c:\temp\bus.log.txt" />
-      <add name="coloredconsole" type="Essential.Diagnostics.ColoredConsoleTraceListener, Essential.Diagnostics" template="{DateTime:HH':'mm':'ssZ} [{Thread}] {EventType} {Source} {Id}: {Message}{Data}" convertWriteToEvent="true"/>
+      <add name="coloredconsole" type="Essential.Diagnostics.ColoredConsoleTraceListener, Essential.Diagnostics" template="{DateTime:HH':'mm':'ssZ} [{Thread}] {EventType} {Source} {Id}: {Message}{Data}" convertWriteToEvent="true" />
       <add name="ReflectInsight.Trace" type="ReflectSoftware.Insight.RITraceListener, ReflectSoftware.Insight" />
     </sharedListeners>
     <trace autoflush="true">
     </trace>
   </system.diagnostics>
 
+  <system.identityModel>
+    <identityConfiguration>
+      <claimsAuthenticationManager type="Todo.Security.GlobalClaimsAuthenticationManager, Todo.Security" />
+      <claimsAuthorizationManager type="Todo.Security.GlobalClaimsAuthorizationManager, Todo.Security" />
+    </identityConfiguration>
+  </system.identityModel>
+  
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <customErrors mode="Off" />
@@ -155,6 +155,14 @@
         <assemblyIdentity name="EntityFramework" publicKeyToken="b77a5c561934e089" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Serilog.FullNetFx" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.3.0.0" newVersion="0.3.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.3.0.0" newVersion="0.3.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.data>
@@ -163,16 +171,4 @@
       <add name="Microsoft SQL Server Compact Data Provider 4.0" invariant="System.Data.SqlServerCe.4.0" description=".NET Framework Data Provider for Microsoft SQL Server Compact" type="System.Data.SqlServerCe.SqlCeProviderFactory, System.Data.SqlServerCe, Version=4.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
     </DbProviderFactories>
   </system.data>
-  <system.net>
-    <mailSettings>
-      <smtp deliveryMethod="SpecifiedPickupDirectory" from="diagnostics@example.org">
-        <!--
-          Used by email trace listeners. For production, or if using a test SMTP server 
-          such as smtp4dev, change to deliveryMethod="Network" and specify your mail host.
-        -->
-        <network host="localhost" defaultCredentials="true" />
-        <specifiedPickupDirectory pickupDirectoryLocation="C:\Temp\MailPickup" />
-      </smtp>
-    </mailSettings>
-  </system.net>
 </configuration>
